crates/vespertide-query/src/snapshots/vespertide_query__builder__tests__add_column_with_fk_unique_index_all_orderings@add_col_fk_uq_ix_mysql.snap
---
source: crates/vespertide-query/src/builder/mod.rs
expression: sql
---
-- Action 0: AddColumn { table: "product", column: ColumnDef { name: "category_id", type: Simple(BigInt), nullable: true, default: None, comment: None, primary_key: None, unique: None, index: None, foreign_key: None }, fill_with: None }
ALTER TABLE `product` ADD COLUMN `category_id` bigint

-- Action 1: AddConstraint { table: "product", constraint: ForeignKey { name: None, columns: ["category_id"], ref_table: "category", ref_columns: ["id"], on_delete: Some(Cascade), on_update: None } }
ALTER TABLE `product` ADD CONSTRAINT `fk_product__category_id` FOREIGN KEY (`category_id`) REFERENCES `category` (`id`) ON DELETE CASCADE

-- Action 2: AddConstraint { table: "product", constraint: Unique { name: None, columns: ["category_id"], strategy: DeleteDuplicates { keep: First } } }
CREATE UNIQUE INDEX `uq_product__category_id` ON `product` (`category_id`)

-- Action 3: AddConstraint { table: "product", constraint: Index { name: None, columns: ["category_id"] } }
CREATE INDEX `ix_product__category_id` ON `product` (`category_id`)
